--- a/Activity12/Exercise_5/index.html
+++ b/Activity12/Exercise_5/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <main>
-        <div class="item-a">
+        <header class="item-a">
             <div class="logo">
                 <h4>LOGO</h4>
             </div>
@@ -21,41 +21,41 @@
                     <li>AYUDA</li>
                 </ul>
             </div>
-        </div>
+        </header>
 
         <div class="item-b">
-
+          Hero
         </div>
 
         <div class="item-c">
-
+          Main Content
         </div>
 
         <div class="item-d">
-
+          Sidebar
         </div>
 
         <div class="item-e">
-
+          Extra Content
         </div>
 
         <div class="item-f">
-
+          Related Images
         </div>
 
         <div class="item-g">
-
+          Related Posts
         </div>
 
-        <div class="item-h">
+        <footer class="item-h">
             <div class="nombre">
-                <h4>Jesús González</h4>
+                <h4>Rafael Salmerón Martos</h4>
             </div>
             <div class="datos">
                 <h4>2ºDAW</h4>
                 <h4>Diseño Interfaces Gráficas</h4>
             </div>
-        </div>
+        </footer>
     </main>
 </body>
 
