--- a/FinalTask/index.html
+++ b/FinalTask/index.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style.css">
-		<title>Rafikify</title>
-	</head>
-	<body>
-	 <main>
-			 <header>Header
-				 <div></div>
-				 <nav><nav>
-			 </header>
-			 <footer>Footer</footer>
-	 </main>
- </body>
+
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/header.css">
+	<link rel="stylesheet" href="./css/footer.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<title>Rafikify</title>
+</head>
+
+<body>
+	<main>
+		<header>
+			<div id="top-header">
+				<img id="logo" alt="Logo" src="./img/logo.png" />
+				<div id="buscar">
+					<input id="search" class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
+					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+				</div>
+				<div>
+					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+				</div>
+			</div>
+			<nav>
+				<ul class="nav nav-pills">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Active</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<section>
+			<nav aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="#">Home</a></li>
+					<li class="breadcrumb-item"><a href="#">Library</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Data</li>
+				</ol>
+			</nav>
+		</section>
+		<footer>Footer</footer>
+	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
+
 </html>
