--- a/FinalTask/index.html
+++ b/FinalTask/index.html
@@ -3,10 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="stylesheet" href="./css/home.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/header.css">
 	<link rel="stylesheet" href="./css/footer.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<title>Rafikify</title>
 </head>
 
@@ -14,30 +15,32 @@
 	<main>
 		<header>
 			<div id="top-header">
-				<img id="logo" alt="Logo" src="./img/logo.png" />
+				<div class="logo">
+					<img id="logo" alt="Logo" src="./img/logo.svg" />
+					<p>Rafikify</p>
+				</div>
 				<div id="buscar">
 					<input id="search" class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
 					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
 				</div>
-				<div>
-					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
-					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
-					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+				<div id="botones">
+					<img id="cart" alt="Cesta de la compra" src="./img/cart.png" />
+					<img id="user" alt="Tu usuario" src="./img/user.png" />
 				</div>
 			</div>
 			<nav>
 				<ul class="nav nav-pills">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Active</a>
+						<a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="products.html">Productos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="nosotros.html">Nosotros</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="contact.html">Contacto</a>
 					</li>
 				</ul>
 			</nav>
@@ -45,13 +48,123 @@
 		<section>
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="#">Home</a></li>
-					<li class="breadcrumb-item"><a href="#">Library</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Data</li>
+					<li class="breadcrumb-item active" aria-current="page">Inicio</li>
 				</ol>
 			</nav>
+			<div id="carrousel">
+				<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+						<li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+						<li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="./img/oferta.jpg" class="d-block w-100 imgCar" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="./img/oferta.jpg" class="d-block w-100 imgCar" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="./img/oferta.jpg" class="d-block w-100 imgCar" alt="...">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</a>
+				</div>
+			</div>
+			<h4> PRODUCTOS DESTACADOS </h4>
+
+			<div class="fila">
+				<a href="producDetail.html">
+					<div class="card">
+						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Producto</p>
+							<p class="card-text precio">235€</p>
+						</div>
+					</div>
+				</a>
+				<a href="producDetail.html">
+					<div class="card">
+						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Producto</p>
+							<p class="card-text precio">235€</p>
+						</div>
+					</div>
+				</a>
+				<a href="producDetail.html">
+					<div class="card">
+						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Producto</p>
+							<p class="card-text precio">235€</p>
+						</div>
+					</div>
+				</a>
+			</div>
+			<div class="fila">
+				<a href="producDetail.html">
+					<div class="card">
+						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Producto</p>
+							<p class="card-text precio">235€</p>
+						</div>
+					</div>
+				</a>
+				<a href="producDetail.html">
+					<div class="card">
+						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Producto</p>
+							<p class="card-text precio">235€</p>
+						</div>
+					</div>
+				</a>
+				<a href="producDetail.html">
+					<div class="card">
+						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Producto</p>
+							<p class="card-text precio">235€</p>
+						</div>
+					</div>
+				</a>
+			</div>
 		</section>
-		<footer>Footer</footer>
+		<footer>
+			<div>
+				<p id="nameEmpresa">Rafikify</p>
+				<div class="divFoot">
+					<img src="./img/email.png">
+					<p class="pFooter">rafikify@email.com</p>
+				</div>
+				<div class="divFoot">
+					<img src="./img/phone.png">
+					<p class="pFooter">999 99 99 99</p>
+				</div>
+			</div>
+			<div>
+				<div class="divFoot">
+					<img src="./img/gps.png">
+					<p class="pFooter">¿Cómo llegar?</p>
+				</div>
+				<div class="divFoot">
+					<img src="./img/facebook.png">
+					<img src="./img/instagram.png">
+					<img src="./img/twitter.png">
+					<img src="./img/youtube.png">
+				</div>
+			</div>
+		</footer>
 	</main>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
