--- a/FinalTask/index.html
+++ b/FinalTask/index.html
@@ -21,10 +21,10 @@
 				</div>
 				<div id="buscar">
 					<input id="search" class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-primary">Search</button>
 				</div>
 				<div id="botones">
-					<img id="cart" alt="Cesta de la compra" src="./img/cart.png" />
+					<a href="cesta.html"><img id="cart" alt="Cesta de la compra" src="./img/cart.png" /></a>
 					<img id="user" alt="Tu usuario" src="./img/user.png" />
 				</div>
 			</div>
@@ -84,28 +84,28 @@
 			<div class="fila">
 				<a href="producDetail.html">
 					<div class="card">
-						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<img src="./img/produc.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<p class="card-text">Producto</p>
-							<p class="card-text precio">235€</p>
+							<p class="card-text precio">50€</p>
 						</div>
 					</div>
 				</a>
 				<a href="producDetail.html">
 					<div class="card">
-						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<img src="./img/produc.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<p class="card-text">Producto</p>
-							<p class="card-text precio">235€</p>
+							<p class="card-text precio">50€</p>
 						</div>
 					</div>
 				</a>
 				<a href="producDetail.html">
 					<div class="card">
-						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<img src="./img/produc.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<p class="card-text">Producto</p>
-							<p class="card-text precio">235€</p>
+							<p class="card-text precio">50€</p>
 						</div>
 					</div>
 				</a>
@@ -113,28 +113,28 @@
 			<div class="fila">
 				<a href="producDetail.html">
 					<div class="card">
-						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<img src="./img/produc.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<p class="card-text">Producto</p>
-							<p class="card-text precio">235€</p>
+							<p class="card-text precio">50€</p>
 						</div>
 					</div>
 				</a>
 				<a href="producDetail.html">
 					<div class="card">
-						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<img src="./img/produc.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<p class="card-text">Producto</p>
-							<p class="card-text precio">235€</p>
+							<p class="card-text precio">50€</p>
 						</div>
 					</div>
 				</a>
 				<a href="producDetail.html">
 					<div class="card">
-						<img src="./img/produc.jpg" class="card-img-top" alt="...">
+						<img src="./img/produc.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<p class="card-text">Producto</p>
-							<p class="card-text precio">235€</p>
+							<p class="card-text precio">50€</p>
 						</div>
 					</div>
 				</a>
@@ -143,25 +143,37 @@
 		<footer>
 			<div>
 				<p id="nameEmpresa">Rafikify</p>
-				<div class="divFoot">
-					<img src="./img/email.png">
-					<p class="pFooter">rafikify@email.com</p>
-				</div>
+				<a href="mailto:elcorreoquequieres@correo.com">
+					<div class="divFoot">
+						<img src="./img/email.png">
+						<p class="pFooter">rafikify@email.com</p>
+					</div>
+				</a>
 				<div class="divFoot">
 					<img src="./img/phone.png">
 					<p class="pFooter">999 99 99 99</p>
 				</div>
 			</div>
 			<div>
+				<a href="https://www.google.es/maps/preview">
+					<div class="divFoot">
+						<img src="./img/gps.png">
+						<p class="pFooter">¿Cómo llegar?</p>
+					</div>
+				</a>
 				<div class="divFoot">
-					<img src="./img/gps.png">
-					<p class="pFooter">¿Cómo llegar?</p>
-				</div>
-				<div class="divFoot">
-					<img src="./img/facebook.png">
+					<a href="https://www.facebook.com">
+						<img src="./img/facebook.png">
+					</a>
+					<a href="https://www.instagram.com">
 					<img src="./img/instagram.png">
+				</a>
+				<a href="https://www.twitter.com">
 					<img src="./img/twitter.png">
+				</a>
+				<a href="https://www.youtube.com">
 					<img src="./img/youtube.png">
+				</a>
 				</div>
 			</div>
 		</footer>
