--- a/FinalTask/producDetail.html
+++ b/FinalTask/producDetail.html
@@ -24,7 +24,7 @@
 					<button id="btnSearch" onclick="searchDoc()" class="btn btn-outline-primary">Search</button>
 				</div>
 				<div id="botones">
-					<img id="cart" alt="Cesta de la compra" src="./img/cart.png" />
+					<a href="cesta.html"><img id="cart" alt="Cesta de la compra" src="./img/cart.png" /></a>
 					<img id="user" alt="Tu usuario" src="./img/user.png" />
 				</div>
 			</div>
@@ -37,7 +37,7 @@
 						<a class="nav-link active" aria-current="page" href="products.html">Productos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link"  href="nosotros.html">Nosotros</a>
+						<a class="nav-link" href="nosotros.html">Nosotros</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contacto</a>
@@ -55,18 +55,18 @@
 			</nav>
 
 			<div class="imgPrinc">
-				<img src="./img/produc.jpg">
+				<img src="./img/produc.png">
 			</div>
 
 			<div class="imgSecun">
-				<img src="./img/produc.jpg">
-				<img src="./img/produc.jpg">
-				<img src="./img/produc.jpg">
-				<img src="./img/produc.jpg">
+				<img src="./img/produc.png">
+				<img src="./img/produc.png">
+				<img src="./img/produc.png">
+				<img src="./img/produc.png">
 			</div>
 
 			<div id="divProd"> Producto </div>
-			<div id="divPrec"> Precio: 235 €&nbsp;&nbsp;&nbsp; <strike>&nbsp;&nbsp;277 €&nbsp;&nbsp;</strike> </div>
+			<div id="divPrec"> Precio: 50 €&nbsp;&nbsp;&nbsp; <strike>&nbsp;&nbsp;69 €&nbsp;&nbsp;</strike> </div>
 			<div id="divDesc"> Descripción </div>
 			<div id="descripcion">
 				<p>
@@ -106,15 +106,17 @@
 			</div>
 			<div id="divBoton">
 				<div id="tabla">
-					<table>
-						<tr>
-							<td>
-								<img src="./img/addcart.png">
-							</td>
-							<td>
-								Añadir al carrito
-							</td>
-					</table>
+					<a id="aTabla" href="cesta.html">
+						<table>
+							<tr>
+								<td>
+									<img src="./img/addcart.png">
+								</td>
+								<td>
+									Añadir al carrito
+								</td>
+						</table>
+					</a>
 				</div>
 			</div>
 			<div id="resenaContainer">
@@ -149,25 +151,37 @@
 		<footer>
 			<div>
 				<p id="nameEmpresa">Rafikify</p>
-				<div class="divFoot">
-					<img src="./img/email.png">
-					<p class="pFooter">rafikify@email.com</p>
-				</div>
+				<a href="mailto:elcorreoquequieres@correo.com">
+					<div class="divFoot">
+						<img src="./img/email.png">
+						<p class="pFooter">rafikify@email.com</p>
+					</div>
+				</a>
 				<div class="divFoot">
 					<img src="./img/phone.png">
 					<p class="pFooter">999 99 99 99</p>
 				</div>
 			</div>
 			<div>
+				<a href="https://www.google.es/maps/preview">
+					<div class="divFoot">
+						<img src="./img/gps.png">
+						<p class="pFooter">¿Cómo llegar?</p>
+					</div>
+				</a>
 				<div class="divFoot">
-					<img src="./img/gps.png">
-					<p class="pFooter">¿Cómo llegar?</p>
-				</div>
-				<div class="divFoot">
-					<img src="./img/facebook.png">
+					<a href="https://www.facebook.com">
+						<img src="./img/facebook.png">
+					</a>
+					<a href="https://www.instagram.com">
 					<img src="./img/instagram.png">
+				</a>
+				<a href="https://www.twitter.com">
 					<img src="./img/twitter.png">
+				</a>
+				<a href="https://www.youtube.com">
 					<img src="./img/youtube.png">
+				</a>
 				</div>
 			</div>
 		</footer>
